Fix sidebar/footer z-index bug. Also adjust general sidebar style

--- a/sass/article.scss
+++ b/sass/article.scss
@@ -30,16 +30,22 @@ h2.headline {
 #sidebar {
   padding-top: 20px;
 
+  p {
+    margin-bottom: 5px;
+  }
+
   .project-info-container {
     margin-top: 20px;
   }
 
-  .recent-stories {
+  .recent {
+    margin: 5px 0;
+
     a {
-      font-size: 16px;
-      padding: 10px 0;
+      font-size: 15px;
+      padding: 6px 0;
       display: block;
-      border-top: 1px solid #ccc;
+      border-bottom: 1px solid #ccc;
     }
   }
 }
@@ -62,7 +68,7 @@ h2.headline {
 
 .moving-container {
   background-color: #fff;
-  z-index: -1;
+  z-index: 0;
   padding-top: 10px;
   max-width: 275px;
 
@@ -70,13 +76,10 @@ h2.headline {
     position: fixed;
     top: 48px;
     width: 22%;
-  }
 
-  &.affix-bottom {
-    top: 520px;
-    position: absolute;
-    width: 100%;
-    max-width: 275px;
+    a:hover {
+      cursor: pointer;
+    }
   }
 }
 
